<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/home"
        android:icon="@drawable/baseline_home_24"
        android:layerType="none"
        android:minHeight="48dp"
        android:title="@string/home" />

    <item
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/stat"
        android:icon="@drawable/baseline_query_stats_24"
        android:title="@string/stat" />

    <item
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/save"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/save" />

</menu>